--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -117,4 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="e77ec7693867e901290ce8d2b3e04f1c" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\e77ec7693867e901290ce8d2b3e04f1c.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="brush-strokes-background_53876-89327" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brush-strokes-background_53876-89327.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="4mJtkR" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\4mJtkR.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
